css tweaks and fix for profile cards being linked and jumping

--- a/weeknine/finalproject_djangoproject/unique_hotels/static/css/style.css
+++ b/weeknine/finalproject_djangoproject/unique_hotels/static/css/style.css
@@ -4,6 +4,10 @@
     border-radius: 35px;
 }
 
+.filters{
+    display: inline-block;
+}
+
 @media screen and (min-width: 768px){
     .user_menu:hover .dropdown-menu{
           display: block;
